--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,9 +22,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Cadastros.CadastroAmigo"
+            android:name=".Controller.CadastroPesssoa"
             android:label="@string/activity_cadastroAmigo" />
-        <activity
+        <!--activity
             android:name=".Consultas.ConsultaAmigo"
             android:label="@string/activity_consultaAmigo"
             android:theme="@style/AppTheme" />
@@ -36,7 +36,7 @@
             android:label="@string/activity_emprestimo" />
         <activity android:name=".Consultas.ConsultaEmprestimo" />
         <activity android:name=".Consultas.DetalheEmprestimo" />
-        <activity android:name=".Informacoes"></activity>
+        <activity android:name=".Informacoes"></activity> -->
     </application>
 
 </manifest>
