--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,17 +37,7 @@
             android:name=".Controller.ConsultaPessoa"
             android:label="Consulta de Pessoas"
             android:theme="@style/AppTheme" />
-        <!--
-        <activity
-            android:name=".Consultas.DetalheAmigo"
-            android:label="@string/activity_detalheAmigo" />
-        <activity
-            android:name=".Cadastros.CadastroEmprestimo"
-            android:label="@string/activity_emprestimo" />
 
-        <activity android:name=".Consultas.DetalheEmprestimo" />
-        <activity android:name=".Informacoes"></activity>
-        -->
         <activity
             android:name=".Controller.CadastroEmprestimo"
             android:label="@string/activity_emprestimo" />
@@ -58,6 +48,8 @@
 
         <activity android:name=".Controller.ConsultaEmprestimo"
             android:label="@string/consulta_emprestimos"/>
+        <activity
+            android:name=".Controller.DetalhePessoa" />
     </application>
 
 </manifest>
